compiler/tests/fa/errors/match_duplicate_pattern.salam
// انتظار: خطا۰۷۸
// زبان: فارسی
شمارش رنگ:
    قرمز
    سبز
تمام

تابع اصلی:
    ک := رنگ.قرمز
    تطبیق ک:
        قرمز: چاپ "ر۱" تمام
        قرمز: چاپ "ر۲" تمام
        وگرنه: چاپ "دیگر" تمام
    تمام
تمام
